--- a/Exercise 4/Exercise4.ipynb
+++ b/Exercise 4/Exercise4.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MaeSantos/CCMACLRL_EXERCISES_COM232ML/blob/main/Exercise4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MaeSantos/CCMACLRL_EXERCISES_COM232ML/blob/main/Exercise%204/Exercise4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,7 @@
       "metadata": {
         "id": "ooRtWBW9vCkP"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
         "id": "CKzyVrfrvwmA",
         "outputId": "f44fd80a-95a0-4a81-d2e2-713590021afe"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "sTBU7aP_weBf"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "id": "Jxdta68pvxUt",
         "outputId": "35940f0c-2522-4bac-c1f5-784c3eac81dc"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "HFTE4DIYFBwI",
         "outputId": "3447b008-4c15-486a-9cef-5c9753727630"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +471,7 @@
         "id": "_1g7hwizFUva",
         "outputId": "d41651bb-b706-4a6b-b5c0-fccae047871c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +503,7 @@
         "id": "08ulJQ6g91Ex",
         "outputId": "0949e324-1b2c-48d4-8140-76b212dbf29d"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
         "id": "x3qOlLszFh4T",
         "outputId": "461adceb-a699-4045-960f-190650fefa9a"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
         "id": "2ppNJKYTFogd",
         "outputId": "63ff5fda-61ca-4abd-e295-b960c3a27a2d"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +659,7 @@
       "metadata": {
         "id": "q9vHl9emFuBt"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -672,7 +672,7 @@
       "metadata": {
         "id": "FFSzu4B6FvAu"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -694,7 +694,7 @@
       "metadata": {
         "id": "RVFUIEB_v4Fp"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -712,7 +712,7 @@
       "metadata": {
         "id": "yC2xkjSowjOt"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,7 +729,7 @@
         "id": "25kQqSTjxVg4",
         "outputId": "23041908-e7e9-47ea-ffde-07040a56d6f6"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1176,7 @@
       "metadata": {
         "id": "eRuJScJAxWy6"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1191,7 +1191,7 @@
         "id": "4CWSZ43-xfQx",
         "outputId": "3fb996d3-d24a-4e08-b05c-905cc1652520"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1222,7 +1222,7 @@
         "id": "MAzmr2J6yiZs",
         "outputId": "326dd6fd-686e-4d5a-d2df-051d194301d2"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1245,16 +1245,19 @@
       "cell_type": "code",
       "source": [
         "def predict_sentence(sentence):\n",
-        "    clean = preprocess_text(sentence)\n",
-        "    vec = vectorizer.transform([clean])\n",
-        "    pred = nb_model.predict(vec)[0]\n",
-        "    label = \"Hate Speech\" if pred == 1 else \"Non-Hate Speech\"\n",
-        "    return label"
+        "    clean_text = preprocess_text(sentence)\n",
+        "    vectorized_text = vectorizer.transform([clean_text])\n",
+        "    prediction = nb_model.predict(vectorized_text)[0]\n",
+        "\n",
+        "    if prediction == 1:\n",
+        "        return \"Hate Speech (1)\"\n",
+        "    else:\n",
+        "        return \"Non-Hate Speech (0)\""
       ],
       "metadata": {
         "id": "vWe9ZBzGypeT"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1270,7 +1273,7 @@
         "id": "ncihbfc2L2rX",
         "outputId": "1522779e-8950-4d10-be71-5b43a0d31fe9"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1625,7 +1628,7 @@
         "id": "LNQZ6QqNyu1g",
         "outputId": "e62be7d0-a420-43b2-ef7e-495db3189c74"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1656,7 +1659,7 @@
         "print(\"\\nSubmission file 'submission.csv' has been created.\")\n",
         "submission_df.head()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
